--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,6 +17,22 @@
     - decrease width of sections
     - add `display: inline-block;` so that sections will float next to each other
   */
+main {
+  max-width: 1000px;
+  
+}
+section {
+   font-size: 2em;
+   background: #444475;
+   width: 45%;
+   display: inline-block;
+  
+}
+h1 {
+  font-size: 3em;
+  }
+  
+  
 }
 /* END FIRST BREAKPOINT */
 
@@ -29,5 +45,14 @@
     - further decrease size of sections
     - increase size of headings and global fonts
   */
+
+  section {
+  font-size: 1.5em;
+  background: #7b8ad6;
+  width: 22%;
+  margin: 1em 1% 1em 1%;
+  display: inline-block;
+  
+}
 }
 /* END SECOND BREAKPOINT */
